--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "snow-theme-dark",
-  "version": "1.0.0",
+  "name": "@snow-design/snow-theme-dark",
+  "version": "0.0.4",
   "scripts": {
     "version:patch": "npm version patch --no-git-tag-version",
     "version:minor": "npm version minor --no-git-tag-version",
